Oauth2-Proxy/manifests/Nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: istio-system
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
